Add GitHub Actions workflow for publishing Docker images
- Add .github/workflows/publish.yml for automated Docker image publishing
- Update README.md with usage instructions
- Update configuration files

--- a/action.yml
+++ b/action.yml
@@ -25,5 +25,7 @@ inputs:
 
 runs:
   using: 'docker'
+  # For local development, use Dockerfile
+  # For published versions, use: docker://ghcr.io/microscaler/sops-encryption-generator:latest
   image: 'Dockerfile'
 
